# tunio

./: .gitignore  Cargo.toml  LICENSE  README.md  techstack.md  techstack.yml
.github/: dependabot.yml
.github/workflows/: tunio.yml  wintun.yml
core/: Cargo.toml
core/src/: async_queue.rs  config.rs  error.rs  file_queue.rs  lib.rs  traits.rs
core/src/queue/: mod.rs  syncfd.rs  tokiofd.rs
examples/: simple.rs  simple_std.rs
netconfig/: Cargo.toml
netconfig/examples/: list_interfaces.rs
netconfig/src/: error.rs  lib.rs  traits.rs  win.rs
netconfig/src/linux/: handle.rs  ifreq.rs  metadata.rs  mod.rs
netconfig/src/win32/: handle.rs  metadata.rs  mod.rs  win_convert.rs
src/: config.rs  driver.rs  error.rs  interface.rs  lib.rs  logger.rs  main.rs  platform.rs  stream.rs  traits.rs  tun.rs  waiter.rs  wintun_raw.rs
src/platform/: mod.rs  util.rs
src/platform/linux/: interface.rs  mod.rs  queue.rs
src/platform/utun/: interface.rs
src/platform/wintun/: config.rs  interface.rs  mod.rs  queue.rs  tokio_interface.rs  tokio_queue.rs
src/platform/wintun/wrappers/: adapter.rs  mod.rs  session.rs
tunio/: Cargo.toml
tunio/examples/: simple.rs  simple_std.rs
tunio/src/: builder.rs  config.rs  driver.rs  error.rs  handle.rs  interface.rs  lib.rs  stream.rs  traits.rs
tunio/src/linux/: ifreq.rs  interface.rs
tunio/src/platform/: mod.rs  util.rs
tunio/src/platform/linux/: ifreq.rs  interface.rs  mod.rs  params.rs  queue.rs  tokio_interface.rs
tunio/src/platform/utun/: interface.rs  mod.rs  queue.rs
tunio/src/platform/wintun/: config.rs  driver.rs  event.rs  interface.rs  logger.rs  mod.rs  queue.rs  session.rs  tokio_interface.rs  tokio_queue.rs
tunio/src/platform/wintun/wrappers/: adapter.rs  handle.rs  session.rs
tunio/src/wintun/: driver.rs  interface.rs  mod.rs  params.rs  stream.rs
wintun-sys/: Cargo.toml  bindgen.ps1  build.rs
wintun-sys/src/: lib.rs
wintun-sys/wintun/: wintun.h  wintun_functions.h
