[package]
name = "tunio"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GamePad64/tunio"
description = "Crate for creating and managing TUN/TAP interfaces with async support. Works best with netconfig crate."
categories = ["os", "network-programming"]
keywords = ["network", "networking", "cross-platform", "tun"]
readme = "README.md"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
futures = "0.3.21"
netconfig = { version = "0.2.0", path = "../netconfig" }
derive_builder = "0.11.2"
cfg-if = "1.0.0"
delegate = "0.8.0"
tunio-core = { version = "0.1.0", path = "core" }

[target.'cfg(target_os = "windows")'.dependencies]
tunio-wintun = { version = "0.1.0", path = "platforms/wintun" }

[target.'cfg(target_os = "linux")'.dependencies]
tunio-linux = { version = "0.1.0", path = "platforms/linux" }

[target.'cfg(target_os = "macos")'.dependencies]
socket2 = "0.4.4"

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"
libc = "0.2.126"

[features]
default = []
tokio = ["tunio-linux/tokio"]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["rt", "macros", "rt-multi-thread", "signal", "sync", "io-util"] }
etherparse = "0.12.0"
env_logger = "0.9.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["wintun-sys", "core", "platforms/wintun", "platforms/linux"]
