[package]
name = "tunio-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
futures = "0.3.21"
netconfig = { version = "0.2.0", path = "../../netconfig" }
derive_builder = "0.11.2"
cfg-if = "1.0.0"
delegate = "0.8.0"
thiserror = "1.0.31"
blocking = "1.2.0"
async-fs = "1.6.0"
async-lock = "2.5.0"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
