[package]
name = "tunio-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
futures.workspace = true
netconfig.workspace = true
derive_builder.workspace = true
delegate.workspace = true
thiserror = "1.0.31"
tokio = { workspace = true, features = ["net"], optional = true }

[features]
tokio = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
