[package]
name = "netconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.34.0", features = ["alloc", "Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }
ipnet = "2.4.0"
widestring = "0.5.1"
scopeguard = "1.1.0"
getset = "0.1.2"
log = "0.4.16"

[dev-dependencies]
env_logger = "0.9.0"
