[package]
name = "netconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.35.0", features = ["alloc", "Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }
widestring = "0.5.1"
scopeguard = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.23.1"
libc = "0.2.124"
bitflags = "1.3.2"
netlink-sys = "0.8.2"
netlink-packet-route = "0.11.0"

[dependencies]
ipnet = "2.4.0"
log = "0.4.16"
cfg-if = "1.0.0"

[dev-dependencies]
env_logger = "0.9.0"
