[package]
name = "tunio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt"] }
log = "0.4.17"
futures = "0.3.21"
netconfig = { git = "https://github.com/GamePad64/netconfig", version = "0.1.3" }
cfg-if = "1.0.0"
thiserror = "1.0.30"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "0.5.1"
uuid = { version = "0.8.2", features = ["v4"] }
bytes = "1.1.0"
crossbeam-channel = "0.5.4"
wintun-sys = { path = "../wintun-sys" }
windows = { version = "0.35.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_IpHelper"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-tun = "0.5.1"
nix = "0.24.1"
libc = "0.2.123"
bitflags = "1.3.2"

[features]
default = ["wintun", "async-tokio"]
# Platforms
wintun = []
async-tokio = []

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros", "rt-multi-thread", "signal", "sync", "io-util"] }
etherparse = "0.10.1"
env_logger = "0.9.0"
