[package]
name = "tunio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt", "net"] }
log = "0.4.16"
futures = "0.3.21"
netconfig = "0.1.4"
derive_builder = "0.11.2"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "0.5.1"
bytes = "1.1.0"
wintun-sys = { path = "../wintun-sys" }
windows = { version = "0.35.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_IpHelper"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.24.1"
libc = "0.2.123"
bitflags = "1.3.2"

[features]
default = ["wintun"]
# Platforms
wintun = []

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros", "rt-multi-thread", "signal", "sync", "io-util"] }
etherparse = "0.10.1"
env_logger = "0.9.0"
