[package]
name = "wintun-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GamePad64/tunio"
description = "Wintun wrapper, generated using bindgen"
categories = ["os", "network-programming"]
keywords = ["network", "networking", "cross-platform", "tun"]
rust-version = "1.60"

[dependencies]
libloading = "0.7.3"
