[package]
name = "wintun-sys"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GamePad64/tunio"
description = "Wintun wrapper, generated using bindgen"
categories = ["os", "network-programming"]
keywords = ["network", "networking", "cross-platform", "tun"]
rust-version = "1.64"

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.7.3"
windows = { version = "0.42.0", features = ["Win32_Foundation", "Win32_NetworkManagement_Ndis"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
bindgen = "0.62.0"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
